--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,3 +1,12 @@
+**v0.4.0**
+
+- Added 'atmoASL' parameter
+- Added 'tempASL' parameter
+- Improved Planet Specific Changes
+- Improved the parameters code for easier modification
+- Improved calculation of AtmosphereFromGround
+
+
 **v0.3.0**
 
 - Removed 'HeightColorFix' parameter
