--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,5 +1,6 @@
 **v0.6.0**
 
+- Updated to KSP 1.1.3 and Kopernicus 1.0.6
 - Overhauled almost all the internal configs
 - Added support for name based PQSMod deletion
 - Added support for name based PQSMod modification
@@ -8,6 +9,7 @@
 - Updated Kittopia Exports and moved these files in a PluginData folder
 - Fixed behaviour of parameter atmoASL
 - Fixed behaviour of parameter tempASL
+- Fixed SCANsat compatibility
 
 
 **v0.5.0**
