--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,3 +1,10 @@
+**v0.7.8**
+
+- Updated to KSP 1.3 and Kopernicus 1.3.0-1
+- Improved PQSCityGroups feature
+- Improved debugging tools
+
+
 **v0.7.7**
 
 - Added the parameter groundTiling
