--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,3 +1,10 @@
+**v0.8.2**
+
+- Improved loading of SigmaDimensions Settings
+- Improved loading of ExternalGroups
+- Improved debugging tools
+
+
 **v0.8.1**
 
 - Updated to Kopernicus 1.3.0-4
