--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,3 +1,11 @@
+**v0.9.1**
+
+- Added the parameter lightRange
+- Power of Antennae is now changed to account for Rescale
+- Added automatic rescaling of scatterer's sunflares
+- Fixed an issue with custom SpaceCenter
+
+
 **v0.9.0**
 
 - Improved code to be less reliable on cfg files
