--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,3 +1,13 @@
+**v0.9.2**
+
+- Fixed scatterer compatibility
+- Fixed EVE compatibility
+- Fixed KSCSwitcher compatibility
+- Fixed PQSCity_Groups MOVE feature
+- Fixed spawn points relocation
+- Added CustomBarnKit compatibility
+
+
 **v0.9.1**
 
 - Added the parameter lightRange
