--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,3 +1,14 @@
+**v0.9.3**
+
+- Updated to Kopernicus 1.3.0-8
+- Added Sigma88LoadingScreens plugin
+- Reorganized internal folder structure
+- Improved debugging tools
+- Fixed resize of Ocean's PQS sphere
+- Fixed resize of PQSMods that use 'scaleDeformityByRadius'
+- PQSCityGroups now use 'name' instead of 'cbNameLater'
+
+
 **v0.9.2**
 
 - Fixed scatterer compatibility
