--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,3 +1,9 @@
+**v0.9.4**
+
+- Updated to KSP 1.3.1 and Kopernicus 1.3.1-2
+- Moved LoadingScreens textures to reduce RAM usage
+
+
 **v0.9.3**
 
 - Updated to Kopernicus 1.3.0-8
