--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,3 +1,10 @@
+**v0.10.0**
+
+- Recompiled against KSP 1.4.3 and Kopernicus 1.4.3-1
+- Removed KSP-AVC compatibility
+- Updated to Sigma LoadingScreens v0.4.0
+
+
 **v0.9.8**
 
 - Added the option to exclude PQSMods
