--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,3 +1,10 @@
+**v0.10.4**
+
+- Added compatibility with custom 'Orbit/period'
+- Fixed performance drop in flight scene
+- Fixed PQSCity and PQSCity2 altitude calculation
+
+
 **v0.10.3**
 
 - Updated to KSP 1.7.1 and Kopernicus 1.7.1-4
